test/conformance/chainsaw/image-validating-policies/standard/notary-attestation-extract-cache-hit/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-notary-attestation-cache
  namespace: default
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/test-verify-image:signed
